--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,7 @@
   "description": "This is a boilerplate build with Vite, React 18, TypeScript, Vitest, Testing Library, TailwindCSS 3, Eslint and Prettier.",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "author": {
     "name": "João Paulo Moraes",
     "email": "joaopaulomoraes@outlook.com",
@@ -14,6 +15,8 @@
   },
   "scripts": {
     "dev": "vite",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d dist",
     "build": "tsc && vite build",
     "serve": "vite preview",
     "test": "vitest",
@@ -24,7 +27,6 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
@@ -44,6 +46,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
+    "gh-pages": "^6.1.1",
     "happy-dom": "^12.10.3",
     "postcss": "^8.4.33",
     "prettier": "3.1.1",
